9 - Monitoring/granafa/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: kube-system
spec:
  rules:
  - host: grafana.internal.peviwatt.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
